--- a/app/views/sub_categories/show.html.erb
+++ b/app/views/sub_categories/show.html.erb
@@ -19,7 +19,7 @@
     </div>
     <hr>
     <div id="category-container">
-      <% @products.each do |product| %>
+      <% @products.uniq(&:name).each do |product| %>
       <%= render 'shared/product_card', product: product %>
       <% end %>
     </div>
