--- a/app/views/pages/_social_media.html.erb
+++ b/app/views/pages/_social_media.html.erb
@@ -1,14 +1,16 @@
 <h2 class="pt-5 text-center">Instagram</h2>
-<p class="text-center pb-5">Seguinos en @cottonhome</p>
+<p class="text-center pb-5">Seguinos en <%= link_to '@cottonhomear', 'https://www.instagram.com/cottonhomear/', target: "_blank", class: "text-body font-weight-bold" %></p>
+<%= link_to 'https://www.instagram.com/cottonhomear/', target: "_blank" do  %>
 <div id="social-media-grid">
   <img src="https://res.cloudinary.com/dye9yotct/image/upload/c_scale,w_624/v1614625554/photo-1583847268964-b28dc8f51f92_vc65ol.jpg" alt="">
   <img src="https://res.cloudinary.com/dye9yotct/image/upload/v1614176395/Cotton_Home_-_Web-4_bmlybm.jpg" alt="">
   <img src="https://res.cloudinary.com/dye9yotct/image/upload/v1614176395/Cotton_Home_-_Web-3_ncd4bf.jpg" alt="">
-   <img src="https://res.cloudinary.com/dye9yotct/image/upload/v1614176396/Cotton_Home_-_Web-9_dxgomc.jpg" alt="">
+  <img src="https://res.cloudinary.com/dye9yotct/image/upload/v1614176396/Cotton_Home_-_Web-9_dxgomc.jpg" alt="">
   <img src="https://res.cloudinary.com/dye9yotct/image/upload/c_scale,w_656/v1614625655/photo-1527694224012-be005121c774_q0o08h.jpg" alt="">
   <img src="https://res.cloudinary.com/dye9yotct/image/upload/c_scale,w_881/v1614625927/1idhda9lmohqssaqe4fcu7lhxjx2_mrgq2q.jpg" alt="">
-   <img src="https://res.cloudinary.com/dye9yotct/image/upload/c_scale,w_942/v1614625739/photo-1595526114035-0d45ed16cfbf_unkhye.jpg" alt="">
+  <img src="https://res.cloudinary.com/dye9yotct/image/upload/c_scale,w_942/v1614625739/photo-1595526114035-0d45ed16cfbf_unkhye.jpg" alt="">
   <img src="https://res.cloudinary.com/dye9yotct/image/upload/c_scale,w_709/v1614626074/wnq2mbq73wt5mb2kpxjcvba5i8iy_sdhuzu.jpg" alt="">
   <img src="https://res.cloudinary.com/dye9yotct/image/upload/c_scale,w_881/v1614626301/photo-1595268396332-9af381e5935e_qaub9e.jpg" alt="">
   <img src="https://res.cloudinary.com/dye9yotct/image/upload/c_scale,w_817/v1614626408/photo-1558882224-dda166733046_ain94m.jpg" alt="" class="d-none d-lg-block">
 </div>
+<% end %>
