--- a/app/assets/stylesheets/products/_show.scss
+++ b/app/assets/stylesheets/products/_show.scss
@@ -3,7 +3,9 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
-
+.btn-border-thick {
+  border: 2px solid;
+}
 .disabled {
   input {
     background-color: white;
@@ -12,11 +14,17 @@
   }
 }
 
+.label-size {
+ .form-check {
+  padding-left: 8px;
+}
+}
+
 //carousel
 .product-image {
   img {
     width: 100%;
-    height: 700px;
+    height: 740px;
     object-fit: cover;
   }
 }
@@ -28,8 +36,8 @@
 
 //second part
 .product-image-container img {
-  width: 100px;
-  height: 150px;
+  width: 90px;
+  height: 140px;
   object-fit: cover;
 }
 
@@ -39,6 +47,18 @@
   font-size: 28px;
   font-weight: bold;
   margin: 0 auto;
+}
+
+@media (max-width: 1199.98px) {
+  .label-size {
+    .form-check {
+      padding-left: 0px;
+    }
+  }
+
+  #price {
+    font-size: 23px;
+  }
 }
 
 
