--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -13,6 +13,9 @@
       <h2><strong>Precio: </strong>$<%= order.amount %></h2>
     </div>
     <div>
+      <h2><strong>Estado del pago:</strong> <%= order&.payment&.payment_status %></h2>
+    </div>
+    <div>
       <h2><strong>Numero de orden: </strong> <%= order.id %> </h2>
     </div>
     <div class="d-md-flex justify-content-between align-items-center">
