--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,7 +4,7 @@
   </div>
 </div>
 <div class="categories pb-5">
-  <div class="d-md-flex justify-content-center py-2 py-md-5 text-center px-3 px-md-0">
+  <div class="d-md-flex justify-content-center pt-2 pb-4 text-center px-3 px-md-0">
     <% @category.sub_categories.each do |sub_category| %>
     <p class="py-2 py-md-3 mb-0 border-bottom"><%= link_to sub_category.name, sub_category_path(sub_category), class: "pl-md-3 text-body" %></p>
     <% end %>
