--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -15,6 +15,9 @@
   grid-gap: 16px;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   margin-bottom: 80px;
+  a {
+    text-decoration: none;
+  }
 }
 
 @media (max-width: 1199.98px) {
