--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -13,7 +13,7 @@
         <td class="text-right">
           <%= link_to 'ver', category_path(category), class: "pr-2" %>
           <%= link_to 'editar', edit_category_path(category), class: "pr-2" %>
-          <% if current_user.permission_level? == "super_admin" %>
+          <% if current_user.permission_level == "super_admin" %>
           <%= link_to 'eliminar', category_path(category),  method: :delete,  data: { confirm: 'Are you sure?' }, class: "text-danger"  %>
           <% end %>
         </td>
