--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Cotton Home - De tu casa un hogar</title>
-    <%= favicon_link_tag(source = "favicon-cotton.png") %>
+    <%= favicon_link_tag(source = "favicon.png") %>
     <meta name="title" content="Cotton Home - De tu casa un hogar">
     <meta name="description" content="Bienvenido al sitio oficial de Cotton Home. Encontrá en esta tienda online sábanas y ropa de cama, creados con tecnología y diseño. ¡Conoce más!">
 
