--- a/app/views/products/_content.html.erb
+++ b/app/views/products/_content.html.erb
@@ -13,9 +13,9 @@
     <% end %>
     <% end %>
   </div>
-  <h6 type="button" class="badge badge-primary btn-sm h6", data-toggle="modal", data-target="#ModalSize">
+  <p style="font-size: 11px;" type="button" class="btn btn-primary btn-sm ", data-toggle="modal", data-target="#ModalSize">
     Guía de Medidas
-  </h6>
+  </p>
   <hr>
   <div>
     <div class="disabled py-3">
