--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,2 +1,16 @@
-<h1>Contacts#new</h1>
-<p>Find me in app/views/contacts/new.html.erb</p>
+<div class="form-container">
+  <div class="forms">
+    <%= simple_form_for @contact, remote: true do |f| %>
+    <p>Name</p>
+    <%= f.input :name, input_html: { class: "form-control form-control-lg"}, label: false %>
+    <p>Email</p>
+    <%= f.input :email,input_html: { class: "form-control form-control-lg"}, label: false %>
+    <p>Message</p>
+    <%= f.input :message, :as => :text, input_html: { class: "form-control form-control form-control-lg", id:"exampleFormControlTextarea1", rows:"4" }, label: false %>
+    <div class="d-none">
+      <%= f.input :nickname %>
+    </div>
+    <%= f.submit 'Send', class: 'btn btn-primary btn-block btn-main m-0' %>
+    <% end %>
+  </div>
+</div>
