--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,12 +1,10 @@
-<div class="form-container">
+<div class="container pt-5 mt-5">
+  <h2 class="text-center">Contacto</h2>
   <div class="forms">
-    <%= simple_form_for @contact, remote: true do |f| %>
-    <p>Name</p>
-    <%= f.input :name, input_html: { class: "form-control form-control-lg"}, label: false %>
-    <p>Email</p>
-    <%= f.input :email,input_html: { class: "form-control form-control-lg"}, label: false %>
-    <p>Message</p>
-    <%= f.input :message, :as => :text, input_html: { class: "form-control form-control form-control-lg", id:"exampleFormControlTextarea1", rows:"4" }, label: false %>
+    <%= simple_form_for @contact do |f| %>
+    <%= f.input :name, input_html: { class: "form-control form-control-lg"}  %>
+    <%= f.input :email,input_html: { class: "form-control form-control-lg"} %>
+    <%= f.input :message, :as => :text, input_html: { class: "form-control form-control form-control-lg", id:"exampleFormControlTextarea1", rows:"4" }%>
     <div class="d-none">
       <%= f.input :nickname %>
     </div>
