--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,6 +1,6 @@
-<div class="container pt-5 mt-5">
-  <h2 class="text-center">Contacto</h2>
-  <div class="forms">
+<div class="container pt-5 mt-5 mb-5 pb-5">
+  <h2 class="text-center pb-3">Contacto</h2>
+  <div class="bg-white p-5 rounded shadow">
     <%= simple_form_for @contact do |f| %>
     <%= f.input :name, input_html: { class: "form-control form-control-lg"}  %>
     <%= f.input :email,input_html: { class: "form-control form-control-lg"} %>
@@ -8,7 +8,7 @@
     <div class="d-none">
       <%= f.input :nickname %>
     </div>
-    <%= f.submit 'Send', class: 'btn btn-primary btn-block btn-main m-0' %>
+    <%= f.submit 'Enviar', class: 'btn btn-dark btn-block m-0' %>
     <% end %>
   </div>
 </div>
