--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -13,7 +13,8 @@
   </div>
   <hr>
   <div class="text-center">
-    <p class="mb-1">Para más información comunicarse con atención al cliente.</p>
-    <p>HORARIO DE ATENCIÓN AL CLIENTE: Lunes a Viernes: 10 hs a 17 hs</p>
+    <p class="mb-1" style="font-size: 14px;">Para más información comunicarse con atención al cliente.</p>
+    <p style="font-size: 14px;">HORARIO DE ATENCIÓN AL CLIENTE: Lunes a Viernes: 10 hs a 17 hs</p>
+    <%= link_to 'Volver', root_path, class: "btn btn-secondary btn-sm"  %>
   </div>
 </div>
