--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -54,7 +54,7 @@
         </ul>
         <div class="pt-5">
           <h6 class="font-weight-bold mb-3">Conoce mas sobre Cotton</h6>
-          <p class="mb-2">Contacto</p>
+          <p class="mb-2"><%= link_to 'Contacto', new_contact_path, style: "font-size: 16px;" %></p>
           <p class="mb-2">Quienes somos?</p>
         </div>
       </div>
