--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,13 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
-      gtag('config', 'G-BRE1JZ4VMF');
+      document.addEventListener("turbolinks:load", function(event) {
+        gtag('config', 'G-BRE1JZ4VMF', {
+          page_location: event.data.url,
+          page_path: event.srcElement.location.pathname,
+          page_title: event.srcElement.title
+        });
+      })
     </script>
   </head>
   <body>
