--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <% if user_signed_in? && current_user.permission_level == "wholesaler" %>
 <%= render 'shared/wholesaler_navbar' %>
 <% else %>
-<nav class="navbar navbar-expand-lg navbar-light navbar-lewagon fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light navbar-lewagon fixed-top shadow-sm">
   <button class="navbar-toggler" type="button" data-toggle="modal" data-target="#navbar-modal">
     <svg width="30" height="18" viewBox="0 0 30 18" fill="none" xmlns="http://www.w3.org/2000/svg">
       <rect width="30" height="2.57143" fill="black"/>
