--- a/app/views/pages/_cards.html.erb
+++ b/app/views/pages/_cards.html.erb
@@ -21,7 +21,7 @@
   <% end %>
 </div>
 <div class="column">
-  <% @categories.where(name: "Living").each do |category| %>
+  <% @categories.where(name: "Almohadones").each do |category| %>
   <%= link_to category_path(category) do  %>
   <div class="card-category-2" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= category.photo %> )">
     <div class="text-center">
