--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -7,6 +7,9 @@
   &:hover {
     box-shadow: 1px 1px 10px lightgrey;
   }
+  img {
+    height: 380px;
+  }
 
 }
 
@@ -23,6 +26,15 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
+@media (max-width: 1199.98px) {
+  .card {
+    img {
+      height: 330px;
+      object-fit: cover;
+    }
+  }
+}
+
 @media(max-width: 575px) {
   #article-card {
     img {
@@ -35,6 +47,15 @@
     h5 {
       font-size: 16px !important;
     }
+  }
+
+  .card {
+
+    img {
+      height: 252px;
+      object-fit: cover;
+    }
+
   }
 }
 
