--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -23,9 +23,9 @@
         <p>Estado:<strong> Aprobado<i class="far fa-check-circle"></i></p></strong>
         <% elsif @order.payment.payment_status == 'wire_transfer' %>
         <p>Metodo de pago:<strong> Transferencia Bancaria<i class="far fa-check-circle"></i></p></strong>
-        <p>CBU: <strong>344938493849384938439</strong></p>
-        <p>Alias: <strong>RETO.PINCEL.ALGO</strong></p>
-        <p>Cuit: <strong>20-20202020-2</strong></p>
+        <p>CBU: <strong>0170223340000031083591</strong></p>
+        <p>Alias: <strong>RETO.PINCEL.LEON</strong></p>
+        <p>Cuit: <strong>20-34067842-8</strong></p>
         <p style="font-size: 12px; margin-bottom: 6px;"><strong>*Una vez realizada la transferencia envianos el comprobante a nuestro mail y procederemos a hacer el envio.</strong></p>
       <% else %>
         <p>Estado:<strong> <span class="text-warning">Pendiente</span></p></strong>
