--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,4 @@
-<% if user_signed_in? && current_user.permission_level == 'admin' %>
+<% if user_signed_in? && current_user.permission_level == 'super_admin' %>
 <div class="container my-5 pt-5">
 <%= render 'admin_panel' %>
 </div>
