Change main banner

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner d-flex align-items-center" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1578683010236-d716f9a3f461?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80);">
+<div class="banner d-flex align-items-center" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dmbom1kyl/image/upload/c_fit,q_auto:good,w_1400/v1620908357/fondo_prgqdl.jpg);">
   <div class="container text-center">
     <p>EN TIENDAS & ONLINE</p>
     <h1>Descubrí Nuestras Sabanas</h1>
