Add locales address in shipping new

--- a/app/views/shippings/_new.html.erb
+++ b/app/views/shippings/_new.html.erb
@@ -9,6 +9,7 @@
   <p class="mb-1"><strong>Zona 1:</strong> Buenos Aires, Cordoba, Entre Ríos, La Pampa, Santa Fe</p>
   <p class="mb-1"><strong>Zona 2:</strong> Catamarca, Chaco, Corrientes, Formosa, La Rioja, Mendoza, Misiones, Neuquen, Rio Negro, San Juan, San Luis, Santiago del Estero, Tucumán</p>
   <p class="mb-1"><strong>Zona 3:</strong> Chubut, Jujuy, Salta, Santa Cruz, Tierra del Fuego </p>
+  <p class="mb-1"><strong>Locales:</strong> San Nicolás de los Arroyos y Belgrano(C.A.B.A)</p>
 </div>
 <h2 class="py-3 h3 font-weight-bold">2.Datos personales</h2>
 <div class="row">
