Add links to social media

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -12,10 +12,10 @@
   </div>
   <h3 class="text-center pt-3">Seguinos en:</h3>
   <div class="d-flex align-items-center justify-content-center pt-3 pb-5">
-    <%= link_to "#", target: "_blank" do  %>
+    <%= link_to "https://www.facebook.com/Cottonhome-100586361808869", target: "_blank" do  %>
     <i class="fab fa-facebook-f h3 mr-3"></i>
     <% end %>
-    <%= link_to "#", target: "_blank" do %>
+    <%= link_to "https://www.instagram.com/cottonhomear/", target: "_blank" do %>
     <i class="fab fa-instagram h2"></i>
     <% end %>
   </div>
