Change footer link

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -31,7 +31,7 @@
   <div class="container border-top border-dark pt-4">
     <div class="text-center">
       <p><i class="far fa-copyright h6"></i> 2021 - <strong>COTTON HOME</strong> Todos los derechos reservados</p>
-      <p class="pt-2 pt-md-0 pb-3">Made by <strong> <%= link_to 'GV', 'http://www.guillermo-varela.com', target: "_blank"  %></strong></p>
+      <p class="pt-2 pt-md-0 pb-3">Made by <strong> <%= link_to 'GV', 'http://www.gvweb.ar', target: "_blank"  %></strong></p>
     </div>
   </div>
 </div>
