--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,7 +2,7 @@
   <h1 class="title-orders">Ventas</h1>
   <div class="text-center">
    <h1>TOTAL</h1>
-   <h4><strong>$<%= @order %></strong></h4>
+   <h4><strong>$<%= @order.round(2) %></strong></h4>
  </div>
 </div>
 <div class="order-index-content">
